# src/route/LoginRoute.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const LoginController = require('../controllers/LoginController')
+
+let route =  express.Router();
+
+route.post("/", LoginController.checkUserAccount)
+.post("/refreshToken", LoginController.refreshToken);
+
+module.exports = route;
