# src/route/Route.js
@@ -1,24 +1,26 @@
 const express = require('express');
 
 let router = express();
-const jwt = require("jsonwebtoken");
+// const jwt = require("jsonwebtoken");
 
 const agencyRoute = require('./AgencyRoute');
+const loginRoute = require('./LoginRoute');
 
 router.use('/agency',agencyRoute);
+router.use('/login',loginRoute);
 
-function authenToken(req, res, next) {
-    const authorizationHeader = req.headers['authorization'];
-    // 'Beaer [token]'
-    const token = authorizationHeader.split(' ')[1];
-    if (!token) res.sendStatus(401);
+// function authenToken(req, res, next) {
+//     const authorizationHeader = req.headers['authorization'];
+//     // 'Beaer [token]'
+//     const token = authorizationHeader.split(' ')[1];
+//     if (!token) res.sendStatus(401);
   
-    jwt.verify(token, process.env.ACCESS_TOKEN_SECRET, (err, data) => {
-      console.log(err, data);
-      if (err) res.sendStatus(403);
-      next();
-    });
-  }
+//     jwt.verify(token, process.env.ACCESS_TOKEN_SECRET, (err, data) => {
+//       console.log(err, data);
+//       if (err) res.sendStatus(403);
+//       next();
+//     });
+//   }
 
 
 module.exports=router
