# src/server.js
@@ -34,44 +34,45 @@ admin.initializeApp({
 
 let refreshTokens = [];
 
-const verifyIdToken = async (idToken) => {
-  try {
-    const decodedIdToken = await admin.auth().verifyIdToken(idToken);
-    return decodedIdToken;
-  } catch (error) {
-    console.error("Error verifying ID token:", error);
-    return null;
-  }
-};
+// const verifyIdToken = async (idToken) => {
+//   try {
+//     const decodedIdToken = await admin.auth().verifyIdToken(idToken);
+//     return decodedIdToken;
+//   } catch (error) {
+//     console.error("Error verifying ID token:", error);
+//     return null;
+//   }
+// };
 
-app.post("/login", (req, res) => {
-  // Authentication
-  const idToken = req.body.idToken.toString();
-  ;
-  console.log(verifyIdToken(idToken))
-  const expiresIn = 60 * 60 * 24 * 5 * 1000;
+// app.post("/login", (req, res) => {
+//   // Authentication
+//   const idToken = req.body.idToken.toString();
+//   // console.log(verifyIdToken(idToken))
+//   const expiresIn = 60 * 60 * 24 * 5 * 1000;
+//   let checkRevoked = true;
+//   admin
+//     .auth().verifyIdToken(idToken, checkRevoked)
+//     .then((data)=>console.log(data))
+//     .catch((e)=>console.log(e))
+//     .createSessionCookie(idToken, { expiresIn })
+//     .then(
+//       (sessionCookie) => {
+//         const options = { maxAge: expiresIn, httpOnly: true };
+//         res.cookie("session", sessionCookie, options);
+//         res.end(JSON.stringify({ status: "success" }));
+//       },
+//       (error) => {
+//         res.status(401).send("UNAUTHORIZED REQUEST!");
+//       }
+//     );
 
-  admin
-    .auth()
-    .createSessionCookie(idToken, { expiresIn })
-    .then(
-      (sessionCookie) => {
-        const options = { maxAge: expiresIn, httpOnly: true };
-        res.cookie("session", sessionCookie, options);
-        res.end(JSON.stringify({ status: "success" }));
-      },
-      (error) => {
-        res.status(401).send("UNAUTHORIZED REQUEST!");
-      }
-    );
-
-  const accessToken = jwt.sign(idToken, process.env.ACCESS_TOKEN_SECRET, {
-    expiresIn: "30s",
-  });
-  const refreshToken = jwt.sign(idToken, process.env.REFRESH_TOKEN_SECRET);
-  refreshTokens.push(refreshToken);
-  res.json({ accessToken, refreshToken });
-});
+//   const accessToken = jwt.sign(idToken, process.env.ACCESS_TOKEN_SECRET, {
+//     expiresIn: "30s",
+//   });
+//   const refreshToken = jwt.sign(idToken, process.env.REFRESH_TOKEN_SECRET);
+//   refreshTokens.push(refreshToken);
+//   res.json({ accessToken, refreshToken });
+// });
 
 // function getUserData() {
 //   const authHeader = req.headers.authorization;
@@ -90,24 +91,24 @@ app.post("/login", (req, res) => {
 //   }
 // }
 
-app.post("/refreshToken", (req, res) => {
-  const refreshToken = req.body.token;
-  if (!refreshToken) res.sendStatus(401);
-  if (!refreshTokens.includes(refreshToken)) res.sendStatus(403);
+// app.post("/refreshToken", (req, res) => {
+//   const refreshToken = req.body.token;
+//   if (!refreshToken) res.sendStatus(401);
+//   if (!refreshTokens.includes(refreshToken)) res.sendStatus(403);
 
-  jwt.verify(refreshToken, process.env.REFRESH_TOKEN_SECRET, (err, data) => {
-    console.log(err, data);
-    if (err) res.sendStatus(403);
-    const accessToken = jwt.sign(
-      { username: data.username },
-      process.env.ACCESS_TOKEN_SECRET,
-      {
-        expiresIn: "30s",
-      }
-    );
-    res.json({ accessToken });
-  });
-});
+//   jwt.verify(refreshToken, process.env.REFRESH_TOKEN_SECRET, (err, data) => {
+//     console.log(err, data);
+//     if (err) res.sendStatus(403);
+//     const accessToken = jwt.sign(
+//       { username: data.username },
+//       process.env.ACCESS_TOKEN_SECRET,
+//       {
+//         expiresIn: "30s",
+//       }
+//     );
+//     res.json({ accessToken });
+//   });
+// });
 
 app.post("/logout", (req, res) => {
   const refreshToken = req.body.token;
